# stamon

./: .coderabbit.yaml  .dockerignore  .editorconfig  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  docker-bake.hcl  index.html  sitemap.xml  style.css
.cargo/: config.toml
.github/workflows/: docker.yml  format.yml  landing.yml  node.yml  rust.yml
about/: index.html
changelog/: index.html
crates/server/: Cargo.toml  build.rs
crates/server/migrations/: 20240606190022_init.sql  20250309111318_triggers.sql
crates/server/src/: auth.rs  config.rs  main.rs  monitors.rs  service.rs  utils.rs  ws.rs
crates/server/src/extractors/: json.rs  mod.rs  path.rs
crates/server/src/job/: mod.rs  monitor.rs  notification.rs
crates/server/src/job/monitor/: http.rs  mod.rs  ping.rs
crates/server/src/middlewares/: log.rs  mod.rs  role.rs
crates/server/src/models/: config.rs  entity.rs  log.rs  mod.rs  notification.rs  service.rs  status_log.rs  user.rs
crates/server/src/models/fixtures/: logs.sql  services.sql  users.sql
crates/server/src/routes/: auth.rs  logs.rs  mod.rs  service.rs  users.rs
crates/ssl-exp/: Cargo.toml
crates/ssl-exp/examples/: demo.rs
crates/ssl-exp/src/: error.rs  lib.rs
frontend/: .dockerignore  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/src/: app.d.ts  app.html  app.pcss
frontend/src/lib/: utils.js
frontend/src/lib/components/chart/: Metric.svelte  gradients.svelte  helpers.js  index.js
frontend/src/lib/components/nav/: header.svelte  notification-popover.svelte  side-bar-card.svelte  side-bar.svelte
frontend/src/lib/components/table/: status-cell.svelte
frontend/src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte  index.js
frontend/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte  index.js
frontend/src/lib/components/ui/badge/: index.js
frontend/src/lib/components/ui/button/: index.js
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.js
frontend/src/lib/components/ui/checkbox/: checkbox.svelte
frontend/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-portal.svelte  dialog-title.svelte  index.js
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  index.js  (+6 more)
frontend/src/lib/data/: nav.js  table.js
frontend/src/lib/store/: auth.js  logs.js  notifications.js  services.js  stats.js  user.js  ws.js
frontend/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/(dashboard)/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/(dashboard)/(components)/: date-cell.svelte  duration-cell.svelte  message-cell.svelte
frontend/src/routes/(dashboard)/monitors/: +page.svelte  data-table.svelte
frontend/src/routes/(dashboard)/notification/: +page.svelte
frontend/src/routes/(dashboard)/services/: +page.svelte  data-table.svelte
frontend/src/routes/(dashboard)/status-pages/: +page.svelte
frontend/src/routes/(dashboard)/users/: +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/settings/: +layout.svelte  +page.svelte
frontend/src/routes/settings/(components)/: sidebar-nav.svelte
frontend/src/routes/settings/account/: +page.svelte
frontend/src/routes/settings/appearance/: +page.svelte
installation/: index.html
landing/: config.toml
landing/content/: _index.md  about.md  changelog.md  installation.md
landing/sass/: _markdown.scss  style.scss
landing/static/: CNAME
landing/templates/: _macros.html  _variables.html  index.html
(+81 files in other folders)
