[workspace]
resolver = "2"
members = [
  "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Noah Cheptoo <krivahtoo@gmail.com>"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
