[workspace]
resolver = "2"
members = [
  # -- Application Services
  "crates/server",

  # -- Application Libraries
  "crates/ssl-exp",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Noah Cheptoo <krivahtoo@gmail.com>", "Esther Akinyi <terryiana22@gmail.com>"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
