[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
axum-macros = { version = "0.4.1" }
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
jsonwebtoken = "9.3.0"
redb = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "sqlite", "macros", "uuid", "migrate", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "timeout", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
apalis = { version = "0.5.3", features = ["sqlite", "retry", "timeout", "cron"] }
ping-rs = "0.1.2"
reqwest = { version = "0.12.4", features = ["json"] }
tower = "0.4.13"
chrono-tz = { version = "0.9.0", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde_repr = "0.1.19"
